add_subdirectory(Breakpad)
add_subdirectory(ByteOrder)
add_subdirectory(Crashpad)
add_subdirectory(Memcpy)
add_subdirectory(MonitorDir)
add_subdirectory(MonitorDir_EFSW)
add_subdirectory(Singleton)
add_subdirectory(OpenSSL)

if(CMAKE_HOST_WIN32)
  add_subdirectory(Thread)
elseif(CMAKE_HOST_LINUX)
  add_subdirectory(Thread)
endif()
